Use Unirest in JWKProvider